--- a/index.html
+++ b/index.html
@@ -30,36 +30,41 @@
         </a>
         <ul class="header-nav">
           <li class="header-item">
-            <a href="./blog.html" class="header-link">Blog</a>
+            <a class="header-link" href="./blog.html">Blog</a>
           </li>
           <li class="header-item">
-            <a href="./work.html" class="header-link">Work</a>
+            <a class="header-link" href="./work.html">Work</a>
           </li>
           <li class="header-item">
-            <a href="" class="header-link">Contact</a>
+            <a class="header-link" href="">Contact</a>
           </li>
         </ul>
       </div>
     </header>
     <!-- main content -->
     <main class="main">
-      <section class="hero container section">
-        <div class="hero-wrapper">
-          <h1 class="hero-title">
-            <span class="title-top">Hi, I’m John!</span>
-            <span class="title-bottom">Creative Technologist</span>
-          </h1>
-          <p class="hero-text">
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-          </p>
-          <button class="hero-button" type="button">Check my Work</button>
+      <section class="hero">
+        <div class="hero-container container">
+          <div class="hero-wrapper">
+            <h1 class="hero-title">
+              <span class="title-top">Hi, I’m John!</span>
+              <span class="title-bottom">Creative Technologist</span>
+            </h1>
+            <p class="hero-text">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+              officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+              amet.
+            </p>
+            <button class="hero-button" type="button">Check my Work</button>
+          </div>
+          <div class="hero-thumb">
+            <img
+              class="hero-picture"
+              src="./assets/images/png/hero-image.png"
+              alt="Site owner photo"
+            />
+          </div>
         </div>
-        <img
-          class="hero-picture"
-          src="./assets/images/png/hero-image-big.png"
-          alt="Site owner photo"
-        />
       </section>
       <!-- Recent Posts -->
       <section class="posts">
